Porting for Soc MT7623n of Mediatek - board Bananapi-R2

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,4 +1,4 @@
-# Local configuration for meta-bbb images
+# Local configuration for meta-mediatek images
 # Yocto Project 2.7 Poky distribution [warrior] branch
 # This is a sysvinit system
 
@@ -19,7 +19,7 @@ VIRTUAL-RUNTIME_init_manager = "sysvinit"
 # Default is 5.0, but you can change versions here 
 # PREFERRED_VERSION_linux-stable = "4.19.%"
 
-MACHINE ?= "beaglebone"
+MACHINE ?= "mt7623-bpi-r2"
 
 #DL_DIR = "${HOME}/oe-sources"
 #SSTATE_DIR = "/oe7/bbb/sstate-cache"
