--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -11,8 +11,6 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/poky/meta-poky \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   ${BSPDIR}/sources/meta-openembedded/meta-oe \
-  ${BSPDIR}/sources/meta-openembedded/meta-networking \
-  ${BSPDIR}/sources/meta-openembedded/meta-python \
-  ${BSPDIR}/sources/meta-qt5 \
-  ${BSPDIR}/sources/meta-bbb \
+  ${BSPDIR}/sources/meta-mediatek \
+  ${BSPDIR}/sources/meta-swupdate \
   "
