Add layer tensorflow and meta-demo

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -20,4 +20,6 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-swupdate \
   ${BSPDIR}/sources/meta-myqt5 \
   ${BSPDIR}/sources/meta-security \
+  ${BSPDIR}/sources/meta-tensorflow \
+  ${BSPDIR}/sources/meta-tensorflow/meta-demo \
   "
