--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -15,4 +15,6 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
   ${BSPDIR}/sources/meta-qt5 \
   ${BSPDIR}/sources/meta-bbb \
+  ${BSPDIR}/sources/meta-jumpnow \
+  ${BSPDIR}/sources/meta-security \
   "
