--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,5 +1,5 @@
 # Local configuration for meta-bbb images
-# Yocto Project 2.7 Poky distribution [warrior] branch
+# Yocto Project 3.0 Poky distribution [zeus] branch
 # This is a sysvinit system
 
 BBMASK = "meta-networking/recipes-kernel/wireguard"
@@ -14,7 +14,7 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio opengl"
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 
 PREFERRED_PROVIDER_udev = "eudev"
-VIRTUAL-RUNTIME_init_manager = "sysvinit"
+#VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
 # Default is 5.0, but you can change versions here 
 # PREFERRED_VERSION_linux-stable = "4.19.%"
@@ -22,6 +22,7 @@ VIRTUAL-RUNTIME_init_manager = "sysvinit"
 MACHINE ?= "beaglebone"
 
 #DL_DIR = "${HOME}/oe-sources"
+DL_DIR ?= "${BSPDIR}/../downloads"
 #SSTATE_DIR = "/oe7/bbb/sstate-cache"
 #TMPDIR = "/oe7/bbb/tmp-warrior"
 
@@ -31,6 +32,12 @@ PACKAGE_CLASSES = "package_ipk"
 
 # i686 or x86_64
 SDKMACHINE = "x86_64"
+# Add systemd configuration
+DISTRO_FEATURES_append = " systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+
+#DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
+#VIRTUAL-RUNTIME_initscripts = ""
 
 # for no root password
 #EXTRA_IMAGE_FEATURES = "debug-tweaks"
